--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+::-webkit-scrollbar {
+  background-color: black;
+/*   width: 0px; */
+}
+::-webkit-scrollbar-thumb {
+  background-color: #111;
+}
 html, body {
   height: 100%;
   width: 100%;
@@ -5,12 +12,17 @@ html, body {
 body {
   margin: 0;
   background-color: black;
+/*   overflow-y: scroll; */
 }
-
 main {
+/*  fixed position is to accommadate mobile address bar behavior  */
+  position: fixed; 
+  height: 100%;
   container-type: size;
   max-height: 100%;
-  margin: auto;
+  left: 50%;
+  transform: translateX(-50%);
+/*   margin: auto; */
   aspect-ratio: 7 / 9;
 /*   outline: 1px solid white; */
 /*   background-image: url("background.png"); */
@@ -30,6 +42,10 @@ main {
   animation-name: pac-move;
   animation-fill-mode: forwards;
   animation-timing-function: linear;
+  /*  pac-person starting position  */
+  transform: translate(calc(2600cqw / 56), calc(5100cqh / 72)) scaleX(-1);
+  /*  (index * 100)cqw / cols = px  */
+  /*  (index * 100)cqh / rows = px  */ 
 }
 .pac > svg {
   width: 100%;
@@ -49,7 +65,6 @@ main {
     d: path('M-0.000327073 99C-0.000327073 49 49.9997 -5.17408e-06 99.9997 -5.17408e-06C150 -5.17408e-06 127.466 17.5 133.5 9.5L65.9997 99L133.5 190.5C127.5 182.367 150 200 99.9997 200C49.9997 200 -0.000327073 149 -0.000327073 99Z');
   }
 }
-
 .pellet {
   width: calc(25cqh / 9);
   height: calc(25cqh / 9);
@@ -68,16 +83,9 @@ main {
   height: 100%;
   border-radius: 50%;
 }
-
-.pac {
-  /*  pac-person starting position  */
-  transform: translate(calc(2600cqw / 56), calc(5100cqh / 72)) scaleX(-1);
-  /*  (index * 100)cqw / cols = px  */
-  /*  (index * 100)cqh / rows = px  */
-  
+.pellet.collected {
+  visibility: hidden;
 }
-
-
 
 .test {
   display: grid;
@@ -91,20 +99,20 @@ main {
 /*  28px padding top  */
 /*  top-left-most grid position = translate(calc(100cqw / 56),calc(700cqh / 72))  */
 }
-
-
-
-
-
 @media (max-aspect-ratio: 7/9) {
   body {
-    overflow: hidden;
+/*     overflow: hidden; */
   }
   main {
-    padding-top: calc(50vh - calc(128.5714vw / 2));
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: initial;
+/*     padding-top: calc(50vh - calc(128.5714vw / 2)); */
   }
   svg.map {
-    height: calc(100% - calc(50vh - calc(128.5714vw / 2)));
+/*     height: 100%; */
+/*     height: calc(100% - calc(50vh - calc(128.5714vw / 2))); */
   }
   .test {
     top: calc(50vh - calc(128.5714vw / 2));
